// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> toMatchSnapshot: Promise 1`] = `
<div>
  <button
    className="sc-htoDjs gtjlbH"
  >
    <span
      className="sc-dnqmqq fEvHXo"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
      <svg version=\\"1.1\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        x=\\"0px\\" y=\\"0px\\"
        width=\\"25px\\" height=\\"25px\\" style=\\"top:5px; left:2px; margin:0; position: absolute;\\"
        viewBox=\\"0 0 50 50\\"
        style=\\"enable-background:new 0 0 50 50;\\">
      <path fill=\\"#fff\\"
        d=\\"M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z\\"
        transform=\\"rotate(217.187 25 25)\\">
        <animateTransform
          attributeType=\\"xml\\"
          attributeName=\\"transform\\"
          type=\\"rotate\\" from=\\"0 25 25\\" to=\\"360 25 25\\" dur=\\"0.6s\\"
          repeatCount=\\"indefinite\\"></animateTransform>
      </path>
    </svg>",
        }
      }
    />
     
    primary
  </button>
</div>
`;

exports[`<Button /> toMatchSnapshot: Size -> defaul 1`] = `
<div>
  <button
    className="sc-htpNat koFEwN"
    onClick={[Function]}
  >
     
    primary
  </button>
</div>
`;

exports[`<Button /> toMatchSnapshot: Size -> large 1`] = `
<div>
  <button
    className="sc-bZQynM iVezcL"
  >
     
    primary
  </button>
</div>
`;

exports[`<Button /> toMatchSnapshot: Size -> small 1`] = `
<div>
  <button
    className="sc-ifAKCX keEvPw"
  >
     
    primary
  </button>
</div>
`;
